fixed syntax error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,6 @@ workflows:
   hello-world-workflow:
     jobs:
       - print_hello
-      - print_world
+      - print_world:
         requires: [print_hello]
 
