--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,5 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
 # Orchestrate or schedule a set of jobs
 jobs:
   print_hello:
@@ -14,6 +13,9 @@ jobs:
     steps:
       - run: echo world
 workflows:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
     jobs:
       - print_hello
       - print_world:
