--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - run: echo world
 workflows:
-  # Name the workflow "welcome"
-  welcome:
+  # Name the workflow
+  workflow_name_goes_here:
     # Run the welcome/run job in its own container
     jobs:
       - print_hello
