--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,11 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - run: echo world
+  print_name:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo << YOUR_NAME >>
 workflows:
   # Name the workflow
   workflow_name_goes_here:
@@ -21,3 +26,4 @@ workflows:
       - print_world:
           requires:
             - print_hello
+      - print_name
