--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,29 +1,17 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Orchestrate or schedule a set of jobs
-jobs:
-  print_hello:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo hello
-  print_world:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo world
-  print_name:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo $YOUR_NAME
+
 workflows:
-  # Name the workflow
-  workflow_name_goes_here:
-    # Run the welcome/run job in its own container
+  test-env-vars:
     jobs:
-      - print_hello
-      - print_world:
-          requires:
-            - print_hello
-      - print_name
+      - build
+
+jobs:
+  build:
+    docker:
+      - image: cimg/base:2020.01
+    steps:
+      - checkout
+      - run:
+          name: "echo an env var that is part of our project"
+          command: |
+            echo $MY_ENV_VAR
