--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,5 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
 # Orchestrate or schedule a set of jobs
 jobs:
   output_hello_world:
@@ -12,23 +8,21 @@ jobs:
     steps:
       - run: echo "hello world" > output.txt
       - persist_to_workspace:
-        root: /tmp/dir
-        paths:
-          - output.txt
+          root: /tmp/dir
+          paths:
+            - output.txt
+
   load_hello_world:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - attact_workspace:
-        at: /tmp/dir
-      - run: cat output.txt
+          at: /tmp/dir
+      - run: cat /tmp/dir/output.txt
 
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  workflow_name:
     jobs:
-      - welcome/run
       - output_hello_world
       - load_hello_world:
         requires: 
