updated output filepath

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo "hello world" > output.txt
+      - run: echo "hello world" > /tmp/dir/output.txt
       - persist_to_workspace:
           root: /tmp/dir
           paths:
