--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,9 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo "hello world" > /tmp/dir/output.txt
+      - run: echo "hello world" > ~/output.txt
       - persist_to_workspace:
-          root: /tmp/dir
+          root: ~/
           paths:
             - output.txt
 
@@ -17,8 +17,8 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - attach_workspace:
-          at: /tmp/dir
-      - run: cat /tmp/dir/output.txt
+          at: ~/
+      - run: cat ~/output.txt
 
 workflows:
   workflow_name:
